Fix repeat background position problem

In the case of right and bottom edge, the factional position within tile
should be calculated in same manner on left and top edge.

BUG=675689
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2709153003
Cr-Commit-Position: refs/heads/master@{#452576}

Former-commit-id: e9e49a4e35605dfeb0511c751613596d7b16463b